package za.co.wethinkcode.robots.server.commands;

public enum OperationalMode {
RELOAD ,
REPAIR ,
NORMAL,
DEAD
}
