// # POJOs for easy JSON serialization
package za.co.wethinkcode.robots.shared;


import za.co.wethinkcode.robots.server.commands.Command;

public class StateTransmission{


    public  StateTransmission(){ }

public void encode(Command com){ }
  public Command  decode(String data){
    return null;
  }
}